这是个错误版本，protostuff在解码的时候报错，初步排查，预测问题是因为使用二进制数据进行传输，这不适合http。

--- a/pom.xml
+++ b/pom.xml
@@ -52,15 +52,27 @@
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
-            <version>4.29.3</version>
+            <version>4.28.1</version>
         </dependency>
 
         <!--  proto 与 Json 互转会用到-->
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java-util</artifactId>
-            <version>4.29.3</version>
+            <version>4.28.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.protostuff</groupId>
+            <artifactId>protostuff-core</artifactId>
+            <version>1.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.protostuff</groupId>
+            <artifactId>protostuff-runtime</artifactId>
+            <version>1.6.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
@@ -73,9 +85,6 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
-                    <compileSourceRoots>
-                        <compileSourceRoot>${project.build.directory}/</compileSourceRoot>
-                    </compileSourceRoots>
                 </configuration>
             </plugin>
         </plugins>
